[project]
name = "jimmy"
version = "0.0.6"
description = "Implementations of popular vision models in Jax (Flax NNX)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "einops>=0.8.0",
  "flax>=0.8.5",
  "jax>=0.4.25",
  "py7zr>=0.21.1",
  "urllib3>=2.2.2"
]

[project.optional-dependencies]
cuda12 = [
  "jaxlib>=0.4.25",
  "jax-cuda12-plugin[with_cuda]>=0.4.25"
]
torch = [
  "torch",
  "torchvision"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
